Fixed portfolio image sizing issue on iPhone size

--- a/wp-content/themes/dac-portfolio/style.css
+++ b/wp-content/themes/dac-portfolio/style.css
@@ -301,13 +301,10 @@ hr {
 	position: relative;
 	line-height: 0;
 	width: 300px;
+	height: 430px;
 	margin-bottom: 2rem; 
 	overflow: hidden;
 }
-/*
-.work-item a {
-	height: 100%;
-}*/
 
 .work-item:hover figcaption {
 	transform: translateY(-80%);
@@ -468,6 +465,7 @@ figcaption p {
 		margin: 0 1em 3em;
 		display: inline-block;
 		width: 350px;
+		height: auto;
 	}
 
 	.copyright,
